updates README and adds translate_to_english.py

--- a/README
+++ b/README
@@ -5,5 +5,6 @@ The goal of this repository is to implement python code that does analysis of ar
 3. Approach
 4. Source files
  - openai_sentence_generator.py: generates sentences in english using gpt4 engine, the prompts requires that the sentences have at least one of the words from the specified word category.
- - translate_mandarin_separate.py: translates each of generated sentences to mandarin using google translate api
+ - translate_mandarin_separate.py: translates each of generated sentences to mandarin using google translate api and tokenizes it using stanza library
+ - translate_to_english.py: translates the tokens of the sentences to english using google translate aptokens of the sentences to english using google translate aptokens of the sentences to english using google translate api
  
